k3s-traefik-stickySessions/yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: myapp-deploy
  name: myapp-deploy
spec:
  replicas: 5
  selector:
    matchLabels:
      app: myapp-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: myapp-deploy
    spec:
      containers:
      - image: ishswar/webpyapp:1.0.1
        #ating uninstall script
        name: webpyapp
        resources: {}
status: {}
