k3s-traefik-stickySessions/yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: myapp-deploy
  annotations:
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/session-cookie-name: "sticky"
  name: myapp-deploy
spec:
  ports:
  - port: 8085
    protocol: TCP
    targetPort: 8080
    name: http
  type: NodePort
  selector:
    app: myapp-deploy
status:
  loadBalancer: {}
