k3s-traefik-stickySessions/yamls/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  labels:
    app: session-affinity
  name: session-affinity
spec:
  rules:
  - http:
      paths:
      - path: /visits-counter
        backend:
          serviceName: myapp-deploy
          servicePort: 8085
